<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.redhat.swatch</groupId>
    <artifactId>swatch-quarkus-parent</artifactId>
    <version>1.1.0-SNAPSHOT</version>
    <relativePath>../swatch-quarkus-parent/pom.xml</relativePath>
  </parent>

  <artifactId>swatch-producer-aws</artifactId>
  <name>SWATCH - Services - Producer AWS</name>
  <packaging>quarkus</packaging>

  <properties>
    <java.version>25</java.version>
    <maven.compiler.release>${java.version}</maven.compiler.release>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>software.amazon.awssdk</groupId>
        <artifactId>bom</artifactId>
        <version>${awssdk-bom.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-health</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-info</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-hibernate-validator</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-jackson</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-micrometer-registry-prometheus</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-opentelemetry</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-resteasy-jackson</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-smallrye-fault-tolerance</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-smallrye-openapi</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-messaging-kafka</artifactId>
    </dependency>
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>marketplacemetering</artifactId>
    </dependency>
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>sts</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.cloud.common</groupId>
      <artifactId>clowder-quarkus-config-source</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkiverse.unleash</groupId>
      <artifactId>quarkus-unleash</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-config-workaround</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch.clients.quarkus</groupId>
      <artifactId>contracts-client</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-model-billable-usage</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-resteasy</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-product-configuration</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-kafka</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-resteasy-client</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-trace-response</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-smallrye-fault-tolerance</artifactId>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-splunk</artifactId>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-junit-mockito</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>rest-assured</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.smallrye.reactive</groupId>
      <artifactId>smallrye-reactive-messaging-in-memory</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.wiremock</groupId>
      <artifactId>wiremock-standalone</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.redhat.swatch</groupId>
      <artifactId>swatch-common-testcontainers</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.openapitools</groupId>
        <artifactId>openapi-generator-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <inputSpec>${project.basedir}/src/main/resources/META-INF/openapi.yaml</inputSpec>
              <generatorName>java</generatorName>
              <modelPackage>com.redhat.swatch.aws.openapi.model</modelPackage>
              <apiPackage>com.redhat.swatch.aws.openapi.resource</apiPackage>
              <invokerPackage>com.redhat.swatch.aws.openapi</invokerPackage>
              <groupId>com.redhat.swatch.aws</groupId>
              <output>${project.build.directory}/generated-sources</output>
              <generateApiTests>false</generateApiTests>
              <generateModelTests>false</generateModelTests>
              <configOptions>
                <interfaceOnly>true</interfaceOnly>
                <library>microprofile</library>
                <java8>true</java8>
                <dateLibrary>java8</dateLibrary>
                <serializationLibrary>jackson</serializationLibrary>
                <useBeanValidation>true</useBeanValidation>
                <microprofileRestClientVersion>3.0</microprofileRestClientVersion>
                <useJakartaEE>true</useJakartaEE>
              </configOptions>
              <additionalProperties>
                <!--
                see https://github.com/OpenAPITools/openapi-generator/pull/4713#issuecomment-633906581
                microprofile doesn't support the standard useJakartaEE=true
                -->
                <additionalProperty>disableMultipart=true</additionalProperty>
              </additionalProperties>
              <importMappings>
                <importMapping>
                  BillableUsage=org.candlepin.subscriptions.billable.usage.BillableUsage
                </importMapping>
              </importMappings>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
